LearningScala/Chapter02/REPL_output.txt
Literals, Values, Variables, and Types
--------------------------------------
scala> val x: Int = 5
x: Int = 5

scala> x
res0: Int = 5

scala> x * 2
res1: Int = 10

scala> x / 5
res2: Int = 1

scala> res0 * res1
res3: Int = 50

scala> var a: Double = 2.72
a: Double = 2.72

scala> a = 355.0 / 113.0
a: Double = 3.1415929203539825

scala> a = 5
a: Double = 5.0

scala> val x: Int = 20
x: Int = 20

scala> val greeting: String = "Hello, World"
greeting: String = Hello, World

scala> val atSymbol: Char = '@'
atSymbol: Char = @

scala> val x = 20
x: Int = 20

scala> val greeting = "Hello, World"
greeting: String = Hello, World

scala> val atSymbol = '@'
atSymbol: Char = @

scala> val x: Int = "Hello"
<console>:7: error: type mismatch;
 found   : String("Hello")
 required: Int
       val x: Int = "Hello"
                    ^
scala> var x = 5
x: Int = 5

scala> x = x * 4
x: Int = 20

scala> var x = 5
x: Int = 5

scala> x = "what's up?"
<console>:8: error: type mismatch;
 found   : String("what\'s up?")
 required: Int
       x = "what's up?"
           ^

scala> var y = 1.5
y: Double = 1.5

scala> y = 42
y: Double = 42.0

Names
-----
scala> val π = 3.14159
π: Double = 3.14159

scala> val $ = "USD currency symbol"
$: String = USD currency symbol

scala> val o_O = "Hmm"
o_O: String = Hmm

scala> val 50cent = "$0.50"
<console>:1: error: Invalid literal number
       val 50cent = "$0.50"
           ^

scala> val a.b = 25
<console>:8: error: value b is not a member of Double
       val a.b = 25
             ^

scala> val `a.b` = 25
a.b: Int = 25

Types
-----
scala> val b: Byte = 10
b: Byte = 10

scala> val s: Short = b
s: Short = 10

scala> val d: Double = s
d: Double = 10.0

scala> val l: Long = 20
l: Long = 20

scala> val i: Int = l
<console>:8: error: type mismatch;
 found   : Long
 required: Int
       val i: Int = l
                    ^

scala> val l: Long = 20
l: Long = 20

scala> val i: Int = l.toInt
i: Int = 20

scala> val anInt = 5
anInt: Int = 5

scala> val yellowRbg = 0xffff00
yellowRbg: Int = 16776960

scala> val id = 100l
id: Long = 100

scala> val pi = 3.1416
pi: Double = 3.1416
